--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
-    <div id="score"></div>
+    <div id="scoreboard">
+    	<div id="text">Score:</div>
+    	<div id="score"></div>
+    </div>
 </body>
 </html>
